# quandry

./: .gitignore  .~lock.evaluations_example.xlsx#  README.md  environment.yaml  guide.ipynb  keys.py  keys.py.template  llm_prompts.txt  prototype.ipynb  pyproject.toml  requirements.txt
docs/: guide.ipynb
docs/examples/: evaluations_example.xlsx  expectation_prompts.csv
src/: asdf.csv  test.py
src/demo/: main.py
src/quandry/: classes.py  exceptions.py  main.py  pandas_util.py  utils.py
src/quandry.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/quandry/evaluators/: LlmClassifier.py  __init__.py  llmclassifier.py  llmclassifier_prompts.py
src/quandry/subjects/: __init__.py  geminisubject.py  openaisubject.py  vanilla_chatgpt.py
src/quandry/testsubjects/: __init__.py  vanilla_chatgpt.py
tests/: jankytests.py  test_.py
